# tauri-practice

./: .gitignore  README.md  index.html  package-lock.json  package.json
my-app/: README.md  index.html  package.json
my-app/src/: main.ts
my-app/src-tauri/: tauri.conf.json
src/: App.vue  AudioControl.vue  PowerControl.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  audio_observer.rs  bluetooth.rs  main.rs  power.rs  shutdown_privilege.rs
