[package]
name = "test-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "test_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.62", features = [
  "Win32_Media_Audio",
  "Win32_System_Com", 
  "Win32_Foundation", 
  "Win32_Media_Audio_Endpoints",
  "Win32_Devices_FunctionDiscovery"
] }
thiserror = "2"
anyhow = "1.0"
